--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
     </properties>
 
     <scm>
-        <connection>scm:git:https://github.com/mabe02/jdbw.git</connection>
-        <developerConnection>scm:git:https://github.com/mabe02/jdbw.git</developerConnection>
+        <connection>scm:git:ssh://git@github.com:mabe02/jdbw.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:mabe02/jdbw.git</developerConnection>
         <url>https://github.com/mabe02/jdbw</url>
         <tag>HEAD</tag>
     </scm>
