--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <name>jdbw</name>
     <description>JDBC wrapping database library</description>
-    <version>1.2.1</version>
+    <version>1.2.2-SNAPSHOT</version>
     <url>http://code.google.com/p/jdbw</url>
 
     <licenses>
@@ -26,7 +26,7 @@
         <connection>scm:git:ssh://git@github.com/mabe02/jdbw.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/mabe02/jdbw.git</developerConnection>
         <url>https://github.com/mabe02/jdbw</url>
-        <tag>jdbw-1.2.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
